--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "cnpmweb",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "20.4.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.5",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
+    "eslint-config-next": "13.4.4",
     "next": "13.4.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+    "react-dom": "18.2.0",
+    "typescript": "5.1.6"
+  },
+  "repository": "git@github.com:elrrrrrrr/cnpmweb.git"
 }
