--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.11.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.5",
+    "@vercel/node": "^2.15.5",
+    "antd": "^5.6.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.0",
     "typescript": "5.1.6"
   },
   "repository": "git@github.com:elrrrrrrr/cnpmweb.git"
