--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.11.1",
+    "@gravatar/js": "^1.1.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.5",
@@ -17,6 +18,11 @@
     "antd": "^5.6.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.4",
+    "github-markdown-css": "^5.2.0",
+    "github-slugger": "^2.0.0",
+    "giturl": "^2.0.0",
+    "highlight.js": "^11.8.0",
+    "marked": "^1.1.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
