--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.0",
-    "typescript": "5.1.6"
+    "@monaco-editor/react": "^4.4.2",
+    "monaco-editor": "^0.39.0",
+    "react-icons": "^4.3.1"
   },
   "repository": "git@github.com:elrrrrrrr/cnpmweb.git"
 }
