--- a/package.json
+++ b/package.json
@@ -11,25 +11,31 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.11.1",
     "@gravatar/js": "^1.1.1",
+    "@monaco-editor/react": "^4.4.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.5",
     "@vercel/node": "^2.15.5",
     "antd": "^5.6.4",
+    "dayjs": "^1.11.9",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.4",
     "github-markdown-css": "^5.2.0",
     "github-slugger": "^2.0.0",
     "giturl": "^2.0.0",
     "highlight.js": "^11.8.0",
+    "lodash": "^4.17.21",
     "marked": "^1.1.0",
+    "monaco-editor": "^0.39.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.0",
-    "@monaco-editor/react": "^4.4.2",
-    "monaco-editor": "^0.39.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "semver": "^7.5.4",
+    "swr": "^2.2.0"
   },
-  "repository": "git@github.com:elrrrrrrr/cnpmweb.git"
+  "repository": "git@github.com:elrrrrrrr/cnpmweb.git",
+  "devDependencies": {
+    "@types/lodash": "^4.14.197"
+  }
 }
