--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "repository": "git@github.com:elrrrrrrr/cnpmweb.git",
   "devDependencies": {
-    "@types/lodash": "^4.14.197"
+    "@types/lodash": "^4.14.197",
+    "@types/semver": "^7.5.0"
   }
 }
