--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@types/react-dom": "18.2.5",
     "@vercel/node": "^2.15.5",
     "antd": "^5.6.4",
+    "antd-style": "^3.4.4",
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.4",
-    "github-markdown-css": "^5.2.0",
     "github-slugger": "^2.0.0",
     "giturl": "^2.0.0",
     "highlight.js": "^11.8.0",
