--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,13 @@ on:
 jobs:
   send_request:
     runs-on: ubuntu-latest
-    if: github.secrets.PIPELINE_WEBHOOK != ''
     steps:
     - name: Trigger pipeline webhook
       run: |
-        curl -X POST '${{ secrets.PIPELINE_WEBHOOK }}' \
-        -H 'Content-Type: application/json' \
-        -d '{}'
+       if [[ -z "${{ secrets.PIPELINE_WEBHOOK }}" ]]; then
+          echo "webhook is not set, skipping request"
+        else
+          curl -X POST "${{ secrets.PIPELINE_WEBHOOK }}" \
+          -H 'Content-Type: application/json' \
+          -d '{}'
+        fi
