--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/cssinjs": "^1.11.1",
     "@ant-design/icons": "^5.2.5",
     "@gravatar/js": "^1.1.1",
+    "@monaco-editor/loader": "^1.3.3",
     "@monaco-editor/react": "^4.4.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
