--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "repository": "git@github.com:elrrrrrrr/cnpmweb.git",
   "devDependencies": {
     "@types/lodash": "^4.14.197",
-    "@types/semver": "^7.5.0"
+    "@types/semver": "^7.5.0",
+    "prettier": "^3.0.3"
   }
 }
+  
