--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "semver": "^7.5.4",
     "swr": "^2.2.0"
   },
-  "repository": "git@github.com:elrrrrrrr/cnpmweb.git",
+  "repository": "https://github.com/cnpm/cnpmweb.git",
   "devDependencies": {
     "@types/lodash": "^4.14.197",
-    "@types/semver": "^7.5.0"
+    "@types/semver": "^7.5.0",
+    "prettier": "^3.0.3"
   }
 }
