--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.11.1",
     "@ant-design/icons": "^5.2.5",
+    "@codeblitzjs/ide-core": "1.0.4",
     "@gravatar/js": "^1.1.1",
     "@monaco-editor/loader": "^1.3.3",
     "@monaco-editor/react": "^4.4.2",
@@ -41,6 +42,7 @@
     "@types/lodash": "^4.14.197",
     "@types/npm-package-arg": "^6.1.3",
     "@types/semver": "^7.5.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "typescript": "5.3.2"
   }
 }
