--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.11.1",
     "@ant-design/icons": "^5.2.5",
-    "@codeblitzjs/ide-core": "1.0.4",
+    "@codeblitzjs/ide-core": "1.0.5-rc-1702630267.0",
     "@gravatar/js": "^1.1.1",
     "@monaco-editor/loader": "^1.3.3",
     "@monaco-editor/react": "^4.4.2",
@@ -35,7 +35,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "semver": "^7.5.4",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "rc-overflow": "^1.3.2"
   },
   "repository": "https://github.com/cnpm/cnpmweb.git",
   "devDependencies": {
