--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/node": "^2.15.5",
     "antd": "^5.6.4",
     "antd-style": "^3.4.4",
+    "chart.js": "^4.4.1",
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.4",
@@ -29,6 +30,7 @@
     "next": "13.4.7",
     "npm-package-arg": "^11.0.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "semver": "^7.5.4",
@@ -37,10 +39,11 @@
   "repository": "https://github.com/cnpm/cnpmweb.git",
   "devDependencies": {
     "@types/lodash": "^4.14.197",
-    "@types/npm-package-arg": "^6.1.3",
-    "@types/semver": "^7.5.0",
     "@types/node": "20.4.1",
+    "@types/npm-package-arg": "^6.1.3",
     "@types/react": "18.2.14",
-    "prettier": "^3.0.3"
+    "@types/semver": "^7.5.0",
+    "prettier": "^3.0.3",
+    "typescript": "5.3.3"
   }
 }
