--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.11.1",
     "@ant-design/icons": "^5.2.5",
-    "@codeblitzjs/ide-core": "1.0.5-rc-1702630267.0",
+    "@codeblitzjs/ide-core": "1.1.0",
     "@gravatar/js": "^1.1.1",
     "@monaco-editor/loader": "^1.3.3",
     "@monaco-editor/react": "^4.4.2",
