--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "semver": "^7.5.4",
-    "swr": "^2.2.0",
-    "rc-overflow": "^1.3.2"
+    "swr": "^2.2.0"
   },
   "repository": "https://github.com/cnpm/cnpmweb.git",
   "devDependencies": {
