--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.11.1",
     "@ant-design/icons": "^5.2.5",
-    "@codeblitzjs/ide-core": "1.1.0",
+    "@codeblitzjs/ide-core": "1.1.1-next-1709195293.0",
     "@gravatar/js": "^1.1.1",
     "@monaco-editor/loader": "^1.3.3",
     "@monaco-editor/react": "^4.4.2",
@@ -29,13 +29,18 @@
     "lodash": "^4.17.21",
     "marked": "^1.1.0",
     "next": "13.4.7",
+    "next-with-less": "^3.0.1",
+    "less": "^4.2.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "npm-package-arg": "^11.0.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "semver": "^7.5.4",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "rc-overflow": "^1.3.2"
   },
   "repository": "https://github.com/cnpm/cnpmweb.git",
   "devDependencies": {
@@ -44,7 +49,14 @@
     "@types/npm-package-arg": "^6.1.3",
     "@types/react": "18.2.14",
     "@types/semver": "^7.5.0",
+    "mini-css-extract-plugin": "^2.8.0",
     "prettier": "^3.0.3",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "raw-loader": "^4.0.2",
+    "file-loader": "^6.2.0",
+    "less-loader": "^7.1.0",
+    "style-loader": "^3.3.4",
+    "css-loader": "^5.0.1",
+    "url-loader": "^4.1.1"
   }
 }
