--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
   },
   "repository": "https://github.com/cnpm/cnpmweb.git",
   "devDependencies": {
-    "@vercel/node": "^2.15.5",
     "@types/lodash": "^4.14.197",
-    "eslint-config-next": "^13.4.4",
     "@types/node": "^20.4.1",
     "@types/npm-package-arg": "^6.1.3",
     "@types/react": "^18.2.14",
     "@types/semver": "^7.5.0",
-    "prettier": "^3.0.3",
+    "@vercel/node": "^2.15.5",
     "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.4",
+    "git-contributor": "^2.1.5",
+    "prettier": "^3.0.3",
     "typescript": "^5.3.3"
   },
   "overrides": {
