--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^13.4.7",
     "npm-package-arg": "^11.0.1",
     "react": "^18.2.0",
+    "react-ansi": "^3.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
@@ -50,6 +51,9 @@
   "overrides": {
     "npm-package-arg": {
       "validate-npm-package-name": "5.0.0"
+    },
+    "react-ansi": {
+      "react": "^18.2.0"
     }
   }
 }
