--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "ci": "next lint && next build"
+    "ci": "npm run lint && npm run build"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.11.1",
