--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "semver": "^7.5.4",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "zustand": "^5.0.9"
   },
   "repository": "https://github.com/cnpm/cnpmweb.git",
   "devDependencies": {
